[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ropy"
version = "0.0.1"
authors = [
  { name="wolfy and mac", email="none@example.com" },
]
description = "A package that transpiles python to roblox lua so roblox users don't need to know roblox lua"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "www.wolfyandmac.com"